--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js"
-},
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^4.21.1"
-  }
+  },
+  "description": ""
 }
